--- a/HACKING.txt
+++ b/HACKING.txt
@@ -78,3 +78,4 @@ The following didn't work.
     # $ sudo apt-get install ruby2.1 ruby-switch
     # $ sudo ruby-switch --set ruby2.1
 
+#Bump to make travis run...
